--- a/啟動的環境.md
+++ b/啟動的環境.md
@@ -261,3 +261,103 @@ ALTER USER 'uriel'@'uriel-BM6875-BM6675-BP6375' IDENTIFIED BY '111111';
 sudo mv mysql-connector-java-8.0.29.jar /usr/share/tomcat9/lib
 ```
 
+
+
+資料來自GPT
+
+### Eclipse IDE for Java EE專業板或企業板
+
+[Eclipse IDE for Enterprise Java and Web Developers](https://www.eclipse.org/downloads/packages/release/2024-12/r/eclipse-ide-enterprise-java-and-web-developers)https://www.eclipse.org/downloads/packages/release/kepler/sr2/eclipse-ide-java-ee-developers
+
+### MySQL Workbench
+
+用snap (Ubuntu Software)
+
+#### **方法一：使用 APT 安装（推荐）**
+
+```
+sudo apt update
+
+sudo apt install mysql-workbench
+```
+
+
+
+这会安装系统源中提供的 MySQL Workbench 版本。
+
+#### **方法二：使用** **.deb** **安装（从官网获取最新版）**
+
+1. 访问官网：
+    https://dev.mysql.com/downloads/workbench/
+
+   
+
+2. 选择你的操作系统（如 Ubuntu）。
+
+   
+
+3. 下载对应的 .deb 包。
+
+   
+
+安装：
+
+```
+ sudo dpkg -i mysql-workbench-community_*.deb
+```
+
+
+
+4. 
+
+```sudo apt-get install -f # 修复依赖
+sudo apt-get install -f # 修复依赖
+```
+
+
+
+connection name : mydb
+
+connect method:stardard TCP/IP(預設)
+
+hostname:127.0.0.1(預設)
+
+port:3306(預設)
+
+username:uriel
+
+password:111111
+
+### DBeaver
+
+[**DBeaver Community**](https://dbeaver.io/download/)
+
+```
+sudo snap install dbeaver-ce
+```
+
+
+
+### Git
+
+ ```
+ sudo apt **update** sudo apt **install** git -y git --version
+ ```
+
+
+
+下載不要太新版本也就是最新的版本的少一年的比較穩定
+
+vscode
+
+https://code.visualstudio.com/
+
+```
+sudo dpkg -i code_1.104.2-1758714318_amd64.deb
+```
+
+
+
+注意：
+
+如果記憶體不夠就會用到硬碟 就會因為轉換導致變慢
