--- a/啟動的環境.md
+++ b/啟動的環境.md
@@ -22,7 +22,7 @@
 
 ------
 
-![188840_0](C:\Users\USER\Downloads\188840_0.jpg)
+![188840_0.jpg](C:\Users\USER\Downloads\188840_0.jpg)
 
 1. 安裝MySQL
 
